force-app/main/default/objects/Lead_Interview__c/Lead_Interview__c.object-meta.xml
<CustomObject>
    <label>Lead Interview</label>
    <nameField>
        <displayFormat>{YY}-{0000}</displayFormat>
        <label>QA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>