force-app/main/default/objects/Lead_Interview__c/fields/answer__c.field-meta.xml
<CustomField>
    <fullName>answer__c</fullName>
    <label>answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>