force-app/main/default/objects/Lead_Interview__c/fields/question__c.field-meta.xml
<CustomField>
    <fullName>question__c</fullName>
    <label>question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>